# kanban

./: README.md  db.sqlite3  hello.py  pyproject.toml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_fields_maxlength_remove_fields_placeholder_and_more.py  0003_alter_fields_type.py  0004_cardfieldvalues_card_cardfieldvalues_field.py  0005_alter_cards_phase.py
frontend/: views.py
kernel/: settings.py  urls.py
templates/core/: api.html
templates/frontend/: kanban.html
